--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <li><a href="/v1.10/">v1.10</a></li>
   <li><a href="/v1.11/">v1.11</a></li>
   <li><a href="/v1.12/">v1.12</a></li>
+  <li><a href="/v1.13/">v1.13</a></li>
 </ul>
 </body>
 </html>
