--- a/compose/yml/index.html
+++ b/compose/yml/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><link rel="canonical" href="http://localhost/compose/compose-file/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=http://localhost/compose/compose-file/" /></head></html>
+<!DOCTYPE html><html><head><link rel="canonical" href="http://localhost/compose/compose-file/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=/compose/compose-file/" /></head></html>
