Rewrites and asciinemas

--- a/get-started/nav.html
+++ b/get-started/nav.html
@@ -4,6 +4,5 @@
   <li {% if include.selected=="3"%}class="active"{% endif %}><a href="part3.md">3: Services</a></li>
   <li {% if include.selected=="4"%}class="active"{% endif %}><a href="part4.md">4: Swarms</a></li>
   <li {% if include.selected=="5"%}class="active"{% endif %}><a href="part5.md">5: Stacks</a></li>
-  <li {% if include.selected=="6"%}class="active"{% endif %}><a href="part6.md">6: Secrets</a></li>
-  <li {% if include.selected=="7"%}class="active"{% endif %}><a href="part7.md">7: Deployment</a></li>
+  <li {% if include.selected=="6"%}class="active"{% endif %}><a href="part6.md">6: Deploy your app</a></li>
 </ul>
