--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li><a href="/v1.11/">v1.11</a></li>
   <li><a href="/v1.12/">v1.12</a></li>
   <li><a href="/v1.13/">v1.13</a></li>
+  <li><a href="/v17.03/">v17.03</a></li>
 </ul>
 </body>
 </html>
